--- a/Css/style.css
+++ b/Css/style.css
@@ -277,10 +277,11 @@ main {
 
 .country-info {
     display: grid;
-    grid-template-columns: repeat(3, 1fr));
+    grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
     margin-bottom: 1.5rem;
 }
+
 
 .info-item {
     text-align: center;
